<resources>
    <string name="app_name">易趣新闻</string>
    <string name="news_main">首页</string>
    <string name="viedo_main">视频</string>
    <string name="live_main">直播</string>
    <string name="audio_main">电台</string>
    <string name="mine_main">我</string>

    <string-array name="news_tags">
        <item>头条</item>
        <item>世界杯</item>
        <item>推荐</item>
        <item>江苏</item>
        <item>国内</item>
        <item>国际</item>
        <item>在现场</item>
        <item>江苏卫视</item>
        <item>荔枝锐评</item>
        <item>热播视频</item>
        <item>荔枝教育</item>
        <item>漫读</item>
    </string-array >

</resources>
