<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lizhixw.lizhixw.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"/>


            <RadioGroup
                android:id="@+id/rg_main"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/btn_news"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/news_main"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:checked="true"
                    android:textColor="@drawable/selector_btn_news_text_main"
                    android:drawableTop="@drawable/selector_btn_news_main"/>
                <RadioButton
                    android:id="@+id/btn_video"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/viedo_main"
                    android:button="@null"
                    android:textColor="@drawable/selector_btn_video_text_main"
                    android:drawableTop="@drawable/selector_btn_video_main"/>
                <RadioButton
                    android:id="@+id/btn_live"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/live_main"
                    android:button="@null"
                    android:textColor="@drawable/selector_btn_live_text_main"
                    android:drawableTop="@drawable/selector_btn_live_main"/>
                <RadioButton
                    android:id="@+id/btn_audio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/audio_main"
                    android:gravity="center"
                    android:button="@null"
                    android:textColor="@drawable/selector_btn_audio_text_main"
                    android:drawableTop="@drawable/selector_btn_audio_main"/>
                <RadioButton
                    android:id="@+id/btn_mine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mine_main"
                    android:gravity="center"
                    android:button="@null"
                    android:textColor="@drawable/selector_btn_mine_text_main"
                    android:drawableTop="@drawable/selector_btn_mine_main"/>
            </RadioGroup>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
